Squash more user permissions bugs

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -214,6 +214,15 @@
         flex: 1 0 auto;
       }
     }
+
+    .userPermissionsEditorContainer {
+      margin-top: 20px;
+      margin-left: 5px;
+    }
+
+    .userPermissionsContentContainer {
+      margin-top: 10px;
+    }
   }
 
   .editableListCreateButtonContainer {
